--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -76,7 +76,7 @@ $output-bourbon-deprecation-warnings: false;
   }
 	.active {
 		a {
-			// color: $breadcrumb-active-color;
+			color: $breadcrumb-active-color;
 			pointer-events: none;
 		}
 	}
