--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -77,3 +77,156 @@
 		}
 	}
 }
+
+.dd-group {
+	&__item {
+		position: relative;
+		&:not(:first-child) {
+			padding-top: rem(20);
+			@include media-breakpoint-up(lg) {
+				padding-top: rem(33);
+			}
+		}
+		padding-bottom: rem(20);
+		&:not(:last-child) {
+			@include media-breakpoint-up(lg) {
+				padding-bottom: rem(39);
+			}
+		}
+		&:last-child {
+			@include media-breakpoint-down(lg) {
+				.dd-group::after {
+					content: none;
+				}
+			}
+		}
+		&::after {
+			position: absolute;
+			content: '';
+			display: block;
+			height: 1px;
+			bottom: 0;
+			left: -50vh;
+			width: 300vh;
+			background-color: #C2C2C2;
+		}
+		&.active {
+			button {
+				&::after {
+					transform: translateX(-50%) rotate(180deg);
+				}
+			}
+			.dd-group__wrraper {
+				&::after {
+					opacity: 0;
+				}
+				& > p {
+					@include media-breakpoint-down(lg) {
+						display: block;	
+						padding-top: rem(16);
+					}
+				}
+			}
+		}
+		h4 {
+			margin-bottom: rem(16);
+		}
+		span {
+			display: inline-block;
+			@include media-breakpoint-up(lg) {
+				margin-bottom: rem(16);
+			}
+			&::before {
+				content: '';
+				display: inline-block;
+				width: rem(16);
+				height: rem(16);
+				margin-right: rem(4);
+				background-color: $primary;
+				vertical-align: middle;
+				background-image: url(../img/svg/chevron-right-sm.svg);
+				background-position: center;
+				background-repeat: no-repeat;
+			}
+		}
+	}
+	&__head {
+		& > .row {
+			align-items: center;
+		}
+	}
+	&__wrraper {
+		max-width: rem(957);
+		position: relative;
+		& > p {
+			@include media-breakpoint-down(lg) {
+				display: none;	
+			}
+		}
+		&::after {
+			position: absolute;
+			content: '';
+			display: block;
+			width: 100%;
+			height: rem(108);
+			bottom: 0;
+			left: 0;
+			transition: all .3s ease;
+			background-image: linear-gradient(360deg, $white 3.98%,hsla(0,0%,100%,0) 65.33%);
+			@include media-breakpoint-down(lg) {
+				display: none;	
+			}
+		}
+	}
+	button {
+		position: relative;
+		border: none;
+		background-color: $primary;
+		width: rem(48);
+		height: rem(48);
+		border-radius: 50%;
+		&::before {
+			position: absolute;
+			content: '';
+			display: block;
+			width: rem(18);
+			height: rem(2);
+			background-color: $dark;
+			margin-left: auto;
+			margin-right: auto;
+			left: 50%;
+			transform: translateX(-50%);
+		}
+		&::after {
+			position: absolute;
+			content: '';
+			display: block;
+			width: rem(18);
+			height: rem(2);
+			background-color: $dark;
+			margin-left: auto;
+			margin-right: auto;
+			left: 50%;
+			transform: translateX(-50%) rotate(90deg);
+			transition: all .3s ease;
+		}
+	}
+	ul {
+		li {
+			list-style-type: none;
+			padding-left: rem(32);
+			position: relative;
+			&::before {
+				content: '';
+				display: block;
+				position: absolute;
+				width: rem(8);
+				height: rem(8);
+				background-color: $primary;
+				left: 8px;
+				top: 50%;
+				transform: translateY(-50%);
+			}
+		}
+	}
+}
