--- a/sourse/pug/pages/12-vac.pug
+++ b/sourse/pug/pages/12-vac.pug
@@ -3,6 +3,7 @@ extends layout/main.pug
 
 include ../blocks/sContent/_sContent.pug
 include ../blocks/sContact/_sContact.pug
+include ../blocks/sVacAccardion/_sVacAccardion.pug
 
 block variables
 	- let  mainPage= 'main-page' 
@@ -16,6 +17,7 @@ block pagecontent
 	+top-nav()
 	+page-head(title)
 		+breadcrumb('Главная','О компании', title)
+	+sVacAccardion()
 	//- +sNumbers
 	//- +sCases
 	//- +sForm()
