--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -106,8 +106,8 @@
 			display: block;
 			height: 1px;
 			bottom: 0;
-			left: -50vh;
-			width: 300vh;
+			left: -50vw;
+			width: 200vw;
 			background-color: #C2C2C2;
 		}
 		&.active {
