--- a/sourse/pug/pages/12-vac.pug
+++ b/sourse/pug/pages/12-vac.pug
@@ -7,7 +7,7 @@ include ../blocks/sVacAccardion/_sVacAccardion.pug
 
 block variables
 	- let  mainPage= 'main-page' 
-	- let  bg= null
+	- let  bg= '12-1-About-company-work.png'
 
 block title
 	- let  title= 'Вакансии'
