--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -90,7 +90,7 @@
 		padding-bottom: rem(20);
 		&:not(:last-child) {
 			@include media-breakpoint-up(lg) {
-				padding-bottom: rem(39);
+				padding-bottom: rem(35);
 			}
 		}
 		&:last-child {
@@ -132,12 +132,12 @@
 			}
 		}
 		h4 {
-			margin-bottom: rem(16);
+			margin-bottom: rem(24);
 		}
 		span {
 			display: inline-block;
 			@include media-breakpoint-up(lg) {
-				margin-bottom: rem(16);
+				margin-bottom: rem(24);
 			}
 			&::before {
 				content: '';
@@ -154,7 +154,9 @@
 		}
 	}
 	&__row {
-		align-items: center;
+		@include media-breakpoint-up(lg) {
+			align-items: center;
+		}
 	}
 	&__content {
 		display: none;
@@ -168,6 +170,7 @@
 			}
 		}
 		&::after {
+			@include mt;
 			position: absolute;
 			content: '';
 			display: block;
@@ -175,7 +178,7 @@
 			height: rem(108);
 			bottom: 0;
 			left: 0;
-			transition: all .3s ease;
+			// transition: all .3s ease;
 			background-image: linear-gradient(360deg, $white 3.98%,hsla(0,0%,100%,0) 65.33%);
 			@include media-breakpoint-down(lg) {
 				display: none;	
