--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -493,14 +493,19 @@ iframe {
 		position: relative;
 		padding-top: rem(72 - 16);
 		@include media-breakpoint-up(lg) {
-			padding-top: rem(104 - 16);
+			padding-top: rem(64);
 		}
 	}
 	.breadcrumb-wrap{
 		position: absolute;
 		top: rem(10);
+		@include media-breakpoint-up(lg) {
+			top: rem(-12);
+		}
 		left: calc(#{$grid-gutter-width} / 2); 
 		width: calc(100%  - #{$grid-gutter-width});
-
+		a {
+			font-size: rem(13);
+		}
 	}
 }
