--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -19,6 +19,10 @@
 	font-size:math.div(8,10)*1rem;
 	width: math.div(8,8)*1em;
 }
+.icon-coalla-logo {
+	font-size:math.div(16,10)*1rem;
+	width: math.div(28,16)*1em;
+}
 .icon-fb {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
