--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -39,3 +39,4 @@ mixin footer()
 					+e.developer(href="#")
 						+icon('coalla-logo')
 						span Сделано в Coalla Agency
+					+e.A.lang(href="#") Eng
