--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -92,12 +92,13 @@ $cyan: #0dcaf0 !default;
 
 // scss-docs-start theme-color-variables
 $primary: $yellow !default;
-$secondary: $gray-600 !default;
+$secondary: #6C6C6C!default;
+$secondary-light: #9D9C9C!default;
 $success: $green !default;
 $info: $cyan !default;
 $warning: $yellow !default;
 $danger: $red !default;
-$light: $gray-100 !default;
+$light: #C2C2C2 !default;
 $dark: $gray-900 !default;
 // scss-docs-end theme-color-variables
 
@@ -105,6 +106,7 @@ $dark: $gray-900 !default;
 $theme-colors: (
   "primary": $primary,
   "secondary": $secondary,
+  "secondary-light": $secondary-light,
   "success": $success,
   "info": $info,
   "warning": $warning,
