--- a/sourse/pug/blocks/sNews/_sNews.pug
+++ b/sourse/pug/blocks/sNews/_sNews.pug
@@ -1,9 +1,18 @@
 mixin sNews(data)
 	// start sNews
 	+b.SECTION.sNews.section#sNews&attributes(attributes)
-		.container
-			+b.section-title.text-center
-				h2 sNews
 		.container-wide
+			+b.section-title
+				h2 Новости и&nbsp;события
 			.row
+				.col-md-6
+					+b.news-item
+						+pic('sNews-1.jpg')
+						h3 Дмитрий Пёрышков в&nbsp;жюри премии WOW Awards
+						.text-secondary-light 21 января
+				.col-md-6
+					+b.news-item
+						+pic('sNews-2.jpg')
+						h3 Леонид Фейгин о&nbsp;новом логотипе ZARA
+						.text-secondary-light 21 января
 	// end sNews
