--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -486,6 +486,8 @@ iframe {
 	max-width: 100%;
 	margin-left: auto;
 	margin-right: auto;
+	padding-left: rem(16);
+	padding-right: rem(16);
 	@include media-breakpoint-up(md) {
 		padding-left: rem(24);
 		padding-right: rem(24);
