--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -70,3 +70,9 @@ mixin logo()
 //- 			</clipPath>
 //- 			</defs>
 //- 		</svg>
+
+mixin news-item(i, t, d)
+	+b.news-item(href="#")
+		+pic(`sNews-${i}.jpg`, 'bg', 0)
+		h3!= t
+		+e.date!= d
