sNews section done

--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -239,6 +239,10 @@
 		margin-bottom: rem(16);
 		margin-left: calc(-1 * var(--bs-gutter-x) / 2);
 		margin-right: calc(-1 * var(--bs-gutter-x) / 2);
+		background-image: url(../img/svg/no-photo.svg);
+		background-repeat: no-repeat;
+		background-position: center;
+		background-color: #F2F2F2;
 		@include media-breakpoint-up(md) {
 			margin-left: 0;
 			margin-right: 0;
