--- a/sourse/pug/blocks/sNews/_sNews.scss
+++ b/sourse/pug/blocks/sNews/_sNews.scss
@@ -1,18 +1,34 @@
 // start .sNews
 .sNews {
-	// --sPT: ;
-	// --sPB: ;
+	--sPT: #{rem(32)};
+	--sPB: #{rem(64)};
 	--sTPB: #{rem(32)};
 	@include media-breakpoint-up(md) {
-		// --sPT: ;
-		// --sPB: ;
+		--sPT: #{rem(52)};
+		--sPB: #{rem(80)};
 		--sTPB: #{rem(40)};
+	}
+
+	.section-title {
+		h2 {
+			text-align: center;
+			@include media-breakpoint-up(md) {
+				text-align: left;
+			}
+		}
 	}
 
 	.row {
 		--bs-gutter-y: #{rem(24)};
 		@include media-breakpoint-up(md) {
 			--bs-gutter-x: #{rem(16)};
+		}
+	}
+	&__btn {
+		margin-top: rem(32);
+		@include media-breakpoint-up(md) {
+			margin-top: rem(24);
+
 		}
 	}
 
