--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -23,6 +23,10 @@
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
 }
+.icon-chevron-right-btn {
+	font-size:math.div(16,10)*1rem;
+	width: math.div(16,16)*1em;
+}
 .icon-chevron-right-sm {
 	font-size:math.div(8,10)*1rem;
 	width: math.div(8,8)*1em;
