--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -76,3 +76,8 @@ mixin news-item(i, t, d)
 		+pic(`sNews-${i}.jpg`, 'bg', 0)
 		h3!= t
 		+e.date!= d
+
+mixin btn-more(l, t)
+	.btn-more(href=`${l}`)
+			+icon('chevron-right-btn')
+			span!= t
