--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -15,7 +15,9 @@ block title
 block pagecontent
 	//- +mob-mnu()
 	+top-nav()
-	+sNews()
+	+sNews(`Новости и события`, `Ещё новости`)
+		+news-item(1, `Дмитрий Пёрышков в&nbsp;жюри премии WOW Awards`, `21 января`)
+		+news-item(2, `Леонид Фейгин о&nbsp;новом логотипе ZARA`, `21 января`)
 	//- +sNumbers
 	//- +sCases
 	//- +sForm()
