--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -72,10 +72,11 @@ mixin logo()
 //- 		</svg>
 
 mixin news-item(i, t, d)
-	+b.news-item(href="#")
-		+pic(`sNews-${i}.jpg`, 'bg', 0)
-		h3!= t
-		+e.date!= d
+	.col-md-6
+		+b.news-item(href="#")
+			+pic(`sNews-${i}.jpg`, 'bg', 0)
+			h3!= t
+			+e.date!= d
 
 mixin btn-more(l, t)
 	.btn-more(href=`${l}`)
