--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -26,7 +26,7 @@ mixin footer()
 				.col-12.col-lg-3.col-adress
 					+e.UL.adress
 						li
-							a(href="#") Москва, ул. Земляной вал, д. 46, офис 41
+							span Москва, ул. Земляной вал, д. 46, офис 41
 						li 
 							a(href="mailto: info@ddvb.ru") info@ddvb.ru
 						li 
