--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -31,6 +31,10 @@
 	font-size:math.div(16,10)*1rem;
 	width: math.div(28,16)*1em;
 }
+.icon-doc-download {
+	font-size:math.div(16,10)*1rem;
+	width: math.div(13,16)*1em;
+}
 .icon-email {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
