--- a/sourse/pug/blocks/sServiceHead/_sServiceHead.pug
+++ b/sourse/pug/blocks/sServiceHead/_sServiceHead.pug
@@ -18,7 +18,5 @@ mixin sServiceHead(data)
 				.col-12
 					+ddGroup()
 						+ddGroupItem('Стратегия', '', 'Мы&nbsp;уверены, что именно смысл является истинным преимуществом сильного бренда. А&nbsp;смыслы рождаются в&nbsp;сознании людей. Наш подход&nbsp;HX (human experience), сфокусированный на&nbsp;человеческих потребностях, эмоциях и&nbsp;восприятиях, обеспечивает')
-			+e.A.download(href="#")
-				+icon('doc-download')
-				span Скачать презентацию (PDF)
+			+downloadLink('Скачать презентацию (PDF)')
 	// end sServiceHead
