--- a/sourse/pug/blocks/sCard/_sCard.pug
+++ b/sourse/pug/blocks/sCard/_sCard.pug
@@ -5,16 +5,12 @@ mixin cardItem(title, text, i)
 			span!= text
 		+pic(`card-bg-${i}.jpg`, 'bg', 0)
 
-mixin sCard(data)
+mixin sCard(btn)
 	// start sCard
 	+b.sCard.section#sCard&attributes(attributes)
 		.container-wide
 			.row
-				.col-md-12
-					+cardItem('Выбери цвет настроения!', 'Стратегия', 1).--horizontal.text-lg-white
-				.col-md-6 
-					+cardItem('Еще один проект для любимого бренда', 'Продвижение, Стратегия', 2).text-lg-white
-				.col-md-6
-					+cardItem('Ничего лишнего', 'Продвижение, Стратегия', 3)
-			+btn-more(`#`, `Портфолио по стратегии`)
+				block
+			if btn
+				+btn-more(`#`, `${btn}`)
 	// end sCard
