--- a/sourse/pug/blocks/sServiceHead/_sServiceHead.pug
+++ b/sourse/pug/blocks/sServiceHead/_sServiceHead.pug
@@ -1,5 +1,5 @@
-mixin servicesList(text) 
-	li
+mixin servicesItem(text) 
+	+e.LI.item
 		+e.BUTTON.btn&attributes(attributes)!= text
 
 mixin sServiceHead(data)
@@ -9,14 +9,29 @@ mixin sServiceHead(data)
 			+e.P.text Процесс создания брендов мы&nbsp;понимаем комплексно и&nbsp;можем взять на&nbsp;себя весь спектр работ&nbsp;&mdash; от&nbsp;проведения маркетинговых исследований до&nbsp;тестирования и&nbsp;реализации собственных творческих разработок.
 			.row
 				.col
-					ul
-						+servicesList('Все услуги')
-						+servicesList('Потребительский брендинг')
-						+servicesList('Корпоративный брендинг')
-						+servicesList('Стратегия').active
-						+servicesList('Продвижение')
+					+e.UL.list
+						+servicesItem('Все услуги')
+						+servicesItem('Потребительский брендинг')
+						+servicesItem('Корпоративный брендинг')
+						+servicesItem('Стратегия').active
+						+servicesItem('Продвижение')
 				.col-12
 					+ddGroup()
-						+ddGroupItem('Стратегия', '', 'Мы&nbsp;уверены, что именно смысл является истинным преимуществом сильного бренда. А&nbsp;смыслы рождаются в&nbsp;сознании людей. Наш подход&nbsp;HX (human experience), сфокусированный на&nbsp;человеческих потребностях, эмоциях и&nbsp;восприятиях, обеспечивает')
+						+ddGroupItem('Стратегия', '', 'Мы&nbsp;уверены, что именно смысл является истинным преимуществом сильного бренда. А&nbsp;смыслы рождаются в&nbsp;сознании людей. Наш подход&nbsp;HX (human experience), сфокусированный на&nbsp;человеческих потребностях, эмоциях и&nbsp;восприятиях, обеспечивает взаимопонимание между бизнесом и&nbsp;потребителем. Используя методики социальной психологии и&nbsp;личностный анализ, мы&nbsp;формируем ценностное предложение, которое в&nbsp;дальнейшем ложится в&nbsp;основу вербальных и&nbsp;визуальных коммуникаций, помогая бизнесу вести с&nbsp;людьми взаимовыгодный и&nbsp;результативный диалог.')
+							+ddContent2('Собираем и анализируем информацию')
+								+ddContent('Аудит бренда')
+								+ddContent('Глубинные и экспертные интервью')
+								+ddContent('Кабинетные исследования')
+								+ddContent('Внешние исследования (супервайзинг)')
+								+ddContent('Стратегические сессии и воркшопы')
+							+ddContent2('Формируем смысловое наполнение')
+								+ddContent('Позиционирование')
+								+ddContent('Платформа бренда')
+								+ddContent('EVP HR бренда (с принципами корпоративной культуры)')
+							+ddContent2('Создаём структуру')
+								+ddContent('Бренд–архитектура')
+								+ddContent('Ассортиментная матрица')
+							+ddContent2('Формируем принципы общения с аудиторией')
+								+ddContent('Коммуникационная стратегия')
 			+downloadLink('Скачать презентацию (PDF)')
 	// end sServiceHead
