--- a/sourse/pug/blocks/sServiceHead/_sServiceHead.scss
+++ b/sourse/pug/blocks/sServiceHead/_sServiceHead.scss
@@ -15,13 +15,13 @@
 			margin-bottom: rem(56);
 		}
 	}
-	ul {
+	&__list {
 		margin-bottom: rem(28);
 		@include media-breakpoint-up(lg) {
 			margin-bottom: rem(48);
 		}
 	}
-	li {
+	&__item {
 		list-style-type: none;
 		display: inline-block;
 		&:not(:last-child) {
@@ -83,15 +83,22 @@
 		@include media-breakpoint-up(lg) {
 			margin-bottom: rem(20);
 		}
-		// &__item {
-		// 	&:after {
-		// 		left: 0;
-		// 		width: 100%;
-		// 		@include media-breakpoint-up(lg) {
-		// 			content: none;
-		// 		}
-		// 	}
-		// }
+		&__content {
+			margin-left: calc((var(--bs-gutter-x) * -1 / 2));
+			margin-right: calc((var(--bs-gutter-x) * -1 / 2));
+			margin-top: rem(24);
+			@include media-breakpoint-up(sm) {
+				margin-left: 0;
+				margin-right: 0;
+				margin-top: rem(32);
+			}
+			p {
+				margin-bottom: rem(8);
+				@include media-breakpoint-up(lg) {
+					margin-bottom: 0;
+				}
+			}
+		}
 	}
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
