--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -94,7 +94,7 @@ $cyan: #0dcaf0 !default;
 $primary: $yellow !default;
 $secondary: $gray-600 !default;
 $success: $green !default;
-$info: $cyan !default;
+$info: #F2F2F2 !default; 
 $warning: $yellow !default;
 $danger: $red !default;
 $light: $gray-100 !default;
